--- a/potfolio_do_guigo/index.html
+++ b/potfolio_do_guigo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./src/assets/AW (1).png" />
+    <link rel="icon" type="image" href="./src/assets/AW.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Guilherme AWP</title>
   </head>
